Added distrubutionManagemnet to pom file